--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.2'
 
     lintOptions {
         checkReleaseBuilds false
@@ -164,26 +164,26 @@ android {
 
 
 dependencies {
-        compile project(':react-native-sqlite-storage')
-        compile fileTree(dir: "libs", include: ["*.jar"])
-        compile "com.android.support:appcompat-v7:23.0.1"
-        compile "com.facebook.react:react-native:+"  // From node_modules
-        compile project(':PushSDK')
-        compile project(':react-native-image-picker')
-        compile project(':react-native-picker')
-        compile project(':react-native-vin-scan')
-        compile project(':react-native-qr-scan')
-        compile project(':react-native-custom-camera')
-        compile project(':react-native-share-wechat')
-        compile project(':react-native-wheel-picker')
-        compile project(':RCTWeChat')
-        compile project(':react-native-code-push')
-        compile 'com.facebook.fresco:animated-gif:0.13.0'
-        compile project(':react-native-spinkit')
-        compile 'com.umeng.analytics:analytics:latest.integration'
-        compile 'com.growingio.reactnative:vds-android-agent:0.0.9@aar'
-        compile 'com.growingio.reactnative:rn-vds-agent:0.0.9@aar'
-
+    compile project(':react-native-sqlite-storage')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
+    compile project(':PushSDK')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-picker')
+    compile project(':react-native-vin-scan')
+    compile project(':react-native-qr-scan')
+    compile project(':react-native-custom-camera')
+    compile project(':react-native-share-wechat')
+    compile project(':react-native-wheel-picker')
+    compile project(':RCTWeChat')
+    compile project(':react-native-code-push')
+    compile 'com.facebook.fresco:animated-gif:0.13.0'
+    compile project(':react-native-spinkit')
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'com.growingio.reactnative:vds-android-agent:0.0.9@aar'
+    compile 'com.growingio.reactnative:rn-vds-agent:0.0.9@aar'
 }
 
 // Run this once to be able to run the application with BUCK
